# aamptoyaml

./: CMakeLists.txt  README.md
include/: util.h
src/: main.cpp
